--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "cli-progress": "^2.1.1",
+    "fast-csv": "^2.5.0",
     "imagemin": "^5.3.1",
     "imagemin-advpng": "^5.0.0",
     "imagemin-optipng": "^7.0.0",
