--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "request": "^2.87.0",
     "spritesmith": "^3.3.1",
     "walk": "^2.3.14"
+  },
+  "scripts": {
+    "update": "node --max-old-space-size=4096 src/update.js"
   }
 }
